--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Index.cshtml
@@ -46,7 +46,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch name.</span>
-                        <input type="text" class="form-control" placeholder="Enter Branch name." name="Branch.Branch_Name" value="@Model.Branch.Branch_Name" id="txtBranch_Name"/>
+                        <input type="text" class="form-control" placeholder="Enter Branch name." name="Branch.Branch_Name" value="@Model.Branch.Branch_Name" id="txtBranch_Name" maxlength="50"/>
                         <input type="hidden" id="hdnBranch_Id" name="Branch.Branch_ID" value="@Model.Branch.Branch_ID" />
                         <input type="hidden" value="@Model.Branch.IsActive" />@*name="Branch.IsActive" Commented by Vinod Mane on 23/09/2016*@
                         <input type="hidden" id="hdnBranch_Name" value="@Model.Branch.Branch_Name"/>@*Added by vinod mane on 27/09/2016*@
@@ -82,17 +82,17 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">City.</span>
-                        <input type="text" class="form-control" placeholder="Enter city." name="Branch.Branch_City" value="@Model.Branch.Branch_City" />
+                        <input type="text" class="form-control" placeholder="Enter city." name="Branch.Branch_City" value="@Model.Branch.Branch_City" maxlength="100" />
                     </div>
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">State.</span>
-                        <input type="text" class="form-control" placeholder="Enter state." name="Branch.Branch_State" value="@Model.Branch.Branch_State" />
+                        <input type="text" class="form-control" placeholder="Enter state." name="Branch.Branch_State" value="@Model.Branch.Branch_State" maxlength="100" />
                     </div>
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Country.</span>
-                        <input type="text" class="form-control" placeholder="Enter country." name="Branch.Branch_Country" value="@Model.Branch.Branch_Country" />
+                        <input type="text" class="form-control" placeholder="Enter country." name="Branch.Branch_Country" value="@Model.Branch.Branch_Country" maxlength="100" />
                     </div>
 
                     <div class="form-group">
@@ -145,7 +145,7 @@
                                             if (itm.Branch_Location_Flag == 1)
                                             {
                                                 <tr id="tr@(i)">
-                                                    <td>
+                                                    <td>txtFar_Location_Pincode
                                                         <span id="trNear_Location_Pincode@(i)"> @itm.Branch_Location_Pincode</span>
                                                         <input type="hidden" id="hdnpincode@(i)" name="Branch.LocationDetailsList[@i].Branch_Location_Pincode" value="@itm.Branch_Location_Pincode">
                                                         <input type="hidden" id="hdnNear_Branch_Location_ID@(i)" name="Branch.LocationDetailsList[@i].Branch_Location_ID" value="@itm.Branch_Location_ID">
