--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -41,7 +41,7 @@
                     <div class="form-group" style="width:500px;">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Brand name.</span>
                         @*<input type="text" class="form-control" placeholder="Enter brand." name="Brand.Brand_Name" />*@@*Commented By Vinod mane on 26/09/2016*@
-                        <input type="text" class="form-control" placeholder="Enter brand." name="Brand.Brand_Name" id="txtBrand_Name" />@*Added By Vinod mane on 26/09/2016*@
+                        <input type="text" class="form-control" placeholder="Enter brand." name="Brand.Brand_Name" id="txtBrand_Name" maxlength="50" />@*Added By Vinod mane on 26/09/2016*@
                         <input type="hidden" id="hdnBrand_Name">
                         <input type="hidden" name="Brand.Brand_Id">
                     </div>
