--- a/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
@@ -38,7 +38,7 @@
 
                 <form role="form" id="frmCategory">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter category." name="Category.Category" id="txtCategory"/>
+                        <input type="text" class="form-control" placeholder="Enter category." name="Category.Category" id="txtCategory" maxlength="50" />
                         <input type="hidden" id="hdnCategory_Name">
 						<input type="hidden" name="Category.Category_Id">
                     </div>
