--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -67,7 +67,7 @@
                     
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">First name.</span>
-                        <input type="text" class="form-control" placeholder="Enter customer first name." name="Customer.First_Name" value="@Model.Customer.First_Name" id="txtFirstName" />
+                        <input type="text" class="form-control" placeholder="Enter customer first name." name="Customer.First_Name" value="@Model.Customer.First_Name" id="txtFirstName" maxlength="48" />
                         <input type="hidden" name="Customer.Customer_Id" value="@Model.Customer.Customer_Id" />
                         <input type="hidden" name="Customer.Customer_Name" value="@Model.Customer.Customer_Name" />
                         <input type="hidden" id="hdnFirstName" value="@Model.Customer.Customer_Name" />@*Added by vinod mane on 28/09/2016*@
@@ -77,7 +77,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Last name.</span>
-                        <input type="text" class="form-control" placeholder="Enter customer last name." name="Customer.Last_Name" value="@Model.Customer.Last_Name" id="txtLastName"/>
+                        <input type="text" class="form-control" placeholder="Enter customer last name." name="Customer.Last_Name" value="@Model.Customer.Last_Name" id="txtLastName" maxlength="48" />
                         <input type="hidden" id="hdnLast_Name" value="@Model.Customer.Last_Name"/> @*Added by vinod mane on 28/09/2016*@
                     </div>
 
@@ -121,17 +121,17 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Billing city.</span>
-                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Billing_City" value="@Model.Customer.Customer_Billing_City" />
+                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Billing_City" value="@Model.Customer.Customer_Billing_City" maxlength="100" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Billing state.</span>
-                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Billing_State" value="@Model.Customer.Customer_Billing_State" />
+                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Billing_State" value="@Model.Customer.Customer_Billing_State" maxlength="100" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Billing country.</span>
-                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Billing_Country" value="@Model.Customer.Customer_Billing_Country" />
+                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Billing_Country" value="@Model.Customer.Customer_Billing_Country" maxlength="100" />
             </div>
 
             <div class="form-group">
@@ -156,17 +156,17 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Shipping city.</span>
-                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Shipping_City" value="@Model.Customer.Customer_Shipping_City" />
+                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Shipping_City" value="@Model.Customer.Customer_Shipping_City" maxlength="100" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Shipping state.</span>
-                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Shipping_State" value="@Model.Customer.Customer_Shipping_State" />
+                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Shipping_State" value="@Model.Customer.Customer_Shipping_State" maxlength="100" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Shipping country.</span>
-                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Shipping_Country" value="@Model.Customer.Customer_Shipping_Country" />
+                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Shipping_Country" value="@Model.Customer.Customer_Shipping_Country" maxlength="100" />
             </div>
 
             <div class="form-group">
@@ -205,12 +205,12 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 1.</span>
-                <input type="text" class="form-control" placeholder="Enter email address 1." name="Customer.Customer_Email1" value="@Model.Customer.Customer_Email1" />
+                <input type="text" class="form-control" placeholder="Enter email address 1." name="Customer.Customer_Email1" value="@Model.Customer.Customer_Email1" maxlength="50" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 2.</span>
-                <input type="text" class="form-control" placeholder="Enter email address 2." name="Customer.Customer_Email2" value="@Model.Customer.Customer_Email2" />
+                <input type="text" class="form-control" placeholder="Enter email address 2." name="Customer.Customer_Email2" value="@Model.Customer.Customer_Email2" maxlength="50" />
             </div>
         </div>
 
@@ -224,7 +224,7 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse name.</span>
-                <input type="text" class="form-control" placeholder="Enter spouse name." name="Customer.Customer_Spouse_Name" value="@Model.Customer.Customer_Spouse_Name" />
+                <input type="text" class="form-control" placeholder="Enter spouse name." name="Customer.Customer_Spouse_Name" value="@Model.Customer.Customer_Spouse_Name" maxlength="100"/>
 
             </div>
 
@@ -246,7 +246,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 1 name.</span>
-                        <input type="text" class="form-control" placeholder="Enter child 1 name." name="Customer.Customer_Child1_Name" value="@Model.Customer.Customer_Child1_Name" />
+                        <input type="text" class="form-control" placeholder="Enter child 1 name." name="Customer.Customer_Child1_Name" value="@Model.Customer.Customer_Child1_Name" maxlength="100"/>
                     </div>
 
                     <div class="form-group">
@@ -259,7 +259,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 2 name.</span>
-                        <input type="text" class="form-control" placeholder="Enter child 2 name." name="Customer.Customer_Child2_Name" value="@Model.Customer.Customer_Child2_Name" />
+                        <input type="text" class="form-control" placeholder="Enter child 2 name." name="Customer.Customer_Child2_Name" value="@Model.Customer.Customer_Child2_Name" maxlength="100" />
                     </div>
 
                     <div class="form-group">
