--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -45,7 +45,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order No.</span>
-                        <input type="text" class="form-control input-sm" name="PurchaseOrder.Purchase_Order_No" id="txtPurchase_Order_No" value="@Model.PurchaseOrder.Purchase_Order_No" placeholder="Enter purchase order no." />
+                        <input type="text" class="form-control input-sm" name="PurchaseOrder.Purchase_Order_No" id="txtPurchase_Order_No" value="@Model.PurchaseOrder.Purchase_Order_No" placeholder="Enter purchase order no." maxlength="50" />
                     </div>
 
                     <div class="form-group">
