--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -123,7 +123,7 @@
                                     <span generated="true" style="color: #b64645;" class="help-block pull-right" id="lblError"></span>
                                     <tr id="PurchaseReturnRequestItemRow_0">
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Barcode" id="textBarcode_No_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Barcode" id="textBarcode_No_0" maxlength="30">
                                         </td>
                                         
                                         @*<td>
@@ -170,7 +170,7 @@
                                             <input type="hidden" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Size_Id" id="hdnSize_Id_0" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Quantity" id="textQuantity_0" value="1" onblur="javascript: CalculateTotal();" />
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Quantity" id="textQuantity_0" value="1" onblur="javascript: CalculateTotal();" maxlength="10" />
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].WSR_Price" id="textWSR_Price_0" readonly />
@@ -220,7 +220,7 @@
                                             <label>Discount</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Percentage" id="textDiscountPercentage_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Percentage" id="textDiscountPercentage_0" maxlength="10">
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Amount" readonly id="textDiscountAmount_0">
